# enveasy

./: .env_example  README.md  enveasy.toml  pyproject.toml
src/enveasy/: __init__.py  cli.py  config.py  parser.py  utils.py
