[project]
name = "enveasy"
version = "0.1.0"
description = "Easily manage env's"
dependencies = [ "typer>=0.9.0", "rich>=13.7.0", "tomli>=2.0.1", "toml>=0.10.2",]
requires-python = ">=3.9"
readme = "README.md"
[[project.authors]]
name = "Kanishk Pachauri"
email = "itskanishkp.py@gmail.com"

[build-system]
requires = [ "setuptools>=61", "wheel",]
build-backend = "setuptools.build_meta"

[project.license]
text = "MIT"

[tool.pdm]
package-type = "library"
